# vibrance

./: .gitignore  LICENSE  README.md  build.ps1  installer.iss  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: _config.yml  downloads.js  index.html  style.css
scripts/: make_icon.py  snapshot_assets.py  snapshot_docs.py  snapshot_ui.py
src/image_editor/: __init__.py  __main__.py  app.py  config.py
src/image_editor/core/: __init__.py  compress.py  filters.py  history.py  image_io.py  pipeline.py  presets.py
src/image_editor/resources/: styles.qss
src/image_editor/resources/icons/: __init__.py
src/image_editor/ui/: icons.py  main_window.py  theme.py
src/image_editor/ui/widgets/: batch_dialog.py  color_wheel.py  compressor_panel.py  crop_dialog.py  curves_editor.py  drop_zone.py  edit_panel.py  export_dialog.py  export_panel.py  file_panel.py  filter_gallery.py  histogram.py  history_strip.py  output_panel.py  preset_grid.py  section_card.py  slider_row.py  split_compare.py  swatch_row.py  toast.py  tool_rail.py  zoom_bar.py  zoomable_view.py
src/image_editor/utils/: logger.py
src/image_editor/workers/: batch_worker.py  compress_worker.py
tests/: test_compress.py  test_filters.py  test_history.py  test_image_io.py  test_presets.py
